Remove javax.xml.bind dependency; replace DatatypeConverter with Java SE APIs
- Drop javax.xml.bind:jaxb-api:2.3.1 shim (added in step 1 as a bridge)
- ReflectUtil: replace DatatypeConverter.parseTime() with
  DatatypeFactory.newXMLGregorianCalendar().toGregorianCalendar()
  and DatatypeConverter.parseBase64Binary() with Base64.getDecoder().decode()
- XmlGen: replace DatatypeConverter.printDateTime() with
  DatatypeFactory.newXMLGregorianCalendar(GregorianCalendar).toXMLFormat()
- javax.xml.datatype and java.util.Base64 are standard Java SE APIs (java.xml
  module, always present) — no external dependency needed
- XmlGenDomTest: replace inline javax.xml.bind.DatatypeConverter with
  java.util.Base64 in test assertion

106 tests passing.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>